[gd_scene load_steps=6 format=3 uid="uid://dia3ltycylxyk"]

[ext_resource type="Script" path="res://src/unit/arrow_tower/arrow_tower.gd" id="1_boc4w"]
[ext_resource type="PackedScene" uid="uid://cjj061pcltpat" path="res://src/unit/unit.tscn" id="1_hrtx6"]
[ext_resource type="Script" path="res://src/common/skill_component.gd" id="3_m6vbw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ywpu"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_nmnih"]
radius = 256.0

[node name="ArrowTower" instance=ExtResource("1_hrtx6")]
script = ExtResource("1_boc4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_7ywpu")

[node name="AttackDistance" type="Area2D" parent="." index="2"]
position = Vector2(64, 64)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDistance" index="0"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_nmnih")

[node name="BulletPosition" type="Marker2D" parent="." index="3"]
position = Vector2(64, 64)

[node name="SpawnTimer" type="Timer" parent="." index="4"]

[node name="SkillComponent2" type="Node" parent="." index="5"]
script = ExtResource("3_m6vbw")

[connection signal="body_entered" from="AttackDistance" to="." method="_on_attack_distance_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
